[package]
name = "weoo_nav_tool"
version = "0.1.4"
authors = ["BenCaddyro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
serde_json = "1.0.108"
serde = {version = "1.0.192", features = ["derive"]}
regex = "1.10.2"
chrono = {version="0.4.31", features = ["serde"]}
egui = "0.23.0"
eframe = "0.23.0"
egui_plot = "0.23.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

