[package]
name = "weoo_nav_tool"
version = "0.1.6"
authors = ["BenCaddyro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
serde_json = "1.0.108"
serde = {version = "1.0.192", features = ["derive"]}
regex = "1.10.2"
chrono = {version="0.4.31", features = ["serde"]}
egui = {version = "0.23.0", features = ["serde","persistence"]}
eframe = {version = "0.23.0", features = ["serde"]}
egui_plot = {version = "0.23.0", features = ["serde"]}
once_cell = "1.18.0"
uuid = {version="1.6.1", features = ["serde", "v4"]}
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

