[package]
name = "weoo"
version = "0.2.1"
authors = ["BenCaddyro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
regex = "1.10"
chrono = {version="0.4", features = ["serde"]}
egui = {version = "0.25", features = ["serde","persistence"]}
eframe = {version = "0.25", features = ["serde"]}
egui_plot = {version = "0.25", features = ["serde"]}
once_cell = "1.19"
uuid = {version="1.7", features = ["serde", "v4"]}
rand = "0.8"

[profile.release]
opt-level = 3

